--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         font-family: 'Plus Jakarta Sans', sans-serif;
         background-color: #18191d;
         color: #9ca3af;
+        margin: 0;
+        padding: 0;
       }
       /* Custom Scrollbar for a cleaner look */
       ::-webkit-scrollbar {
@@ -60,11 +62,13 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0",
+    "recharts": "https://esm.sh/recharts@2.13.3?deps=react@19.0.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "recharts": "https://esm.sh/recharts@^3.5.1"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
